hphp/hack/test/full_fidelity/cases/test_errors_array_type.php
<?hh

function f (int $a) : Vector<array> {} // error
function f (array $a) : int {} // error
function f (int $a) : array {} // error
function f (array<int> $a) : array<int, string> {} //no error
